--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: My Personal Stack Problems
 author: tmflo
 github: https://github.com/tmflo
 about: 
-disqus_shortname: stackproblems
+disqus_shortname: 리스트
 google_analytics: UA-XXXXXXXX-Y
 avatar_url: /static/img/avatar.jpg
 
